<resources>
    <string name="app_name">Shifumi</string>
    <string name="title">Shifumi!</string>
    <string name="btn_creer" >Créer une partie</string>
    <string name="btn_rejoindre">Rejoindre une partie</string>
    <string name="btn_quitter">Quitter</string>
    <string name="label_recherche_client">En attente d\'un client...</string>
    <string name="label_patienter">Veuillez patienter en attendant\\nqu\'un client se connecte.</string>
    <string name="label_votre_ip">Votre adresse IP est :</string>
    <string name="label_conn_etablie">Connexion établie !</string>
    <string name="label_commencer">Commencer la partie</string>
    <string name="btn_annuler">Annuler</string>
    <string name="desc_wifi_icon" >Wifi icon</string>
    <string name="label_recherche_serveur">Recherche d\'un serveur...</string>
    <string name="label_serveur_IP">L\'adresse IP du serveur est :</string>
    <string name="btn_pierre">Pierre</string>
    <string name="btn_feuille">Feuille</string>
    <string name="btn_ciseaux">Ciseaux</string>
</resources>
