<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/labelActivite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@color/colorPrimary" />

        <TextView
            android:id="@+id/monScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Vous : 0" />

        <TextView
            android:id="@+id/sonScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="0 : Adversaire" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sonChoix"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:rotation="180" />

        <TextView
            android:id="@+id/resultat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/monChoix"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btnPierre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/btn_pierre"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/rock" />

        <ImageButton
            android:id="@+id/btnFeuille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/btn_feuille"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/paper" />

        <ImageButton
            android:id="@+id/btnCiseaux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/btn_ciseaux"
            android:padding="15dp"
            android:scaleType="centerInside"
            android:src="@drawable/scissors" />

    </LinearLayout>

</LinearLayout>